--- a/Ang2Demo/Ang2Demo.csproj
+++ b/Ang2Demo/Ang2Demo.csproj
@@ -191,6 +191,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="package.json" />
+    <None Include="Properties\PublishProfiles\Ang2Pub.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
